# scjn-transcripts

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/mongo/scripts/: init.example.js  init.js
docker/redis/: redis.conf  redis.conf.example
prototypes/: extractor.ipynb  pdf-to-markdown.ipynb
scjn_transcripts/: cli.py  collector.py  config.py  logger.py
scjn_transcripts/cleaner/: managers.py  transcripts.py
scjn_transcripts/clients/: buscador_jurídico.py
scjn_transcripts/collector/: managers.py  scjn_transcripts.py  transcripts.py
scjn_transcripts/io/: managers.py  transcripts.py
scjn_transcripts/models/: config.py
scjn_transcripts/models/cleaner/: transcript.py
scjn_transcripts/models/collector/: entity_count.py  id.py  index.py  response.py
scjn_transcripts/models/collector/response/: document.py
scjn_transcripts/models/collector/transcription/: asunto.py  mes.py  meta.py  organo_jurisdiccional.py
scjn_transcripts/models/extractor/: entity_count.py  id.py  index.py  response.py
scjn_transcripts/models/extractor/transcription/: meta.py  organo_jurisdiccional.py
scjn_transcripts/utils/: base_data_handler.py  digest.py  mongo.py  redis.py  requests.py
scjn_transcripts/utils/clients/: buscador_jurídico.py
tests/clients/: test_buscador_jurídico.py
tests/data/extractor/: test-response.json
tests/models/collector/: test_response.py
tests/models/extractor/: test_response.py
tests/utils/: test_digest.py  test_mongo.py  test_redis.py
tests/utils/clients/: test_buscador_jurídico.py
